calender text align to right and header fix

--- a/packages/wekan-fullcalendar/fullcalendar/fullcalendar.css
+++ b/packages/wekan-fullcalendar/fullcalendar/fullcalendar.css
@@ -313,6 +313,12 @@ temporary rendered events).
   /* don't put a border between event cells */
   border-top: 0; }
 
+  /* added text align at 15.11 */
+
+  .fc-content{
+    text-align: right;
+  }
+
 /* Scrolling Container
 --------------------------------------------------------------------------------------------------*/
 .fc-scroller {
@@ -900,7 +906,8 @@ NOTE: use percentage font sizes or else old IE chokes
   float: right; }
 
 .fc-rtl .fc-basic-view .fc-day-top .fc-day-number {
-  float: left; }
+  /* changed at 15.11 */
+  float: right; }
 
 .fc-ltr .fc-basic-view .fc-day-top .fc-week-number {
   float: left;
